--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devportfolio-template",
+  "name": "daniel-p-sullivan.github.io",
   "version": "1.1.3",
   "description": "",
   "main": "js/scripts.js",
